[package]
name = "mandelrs"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colors-transform = "0.2.11"
image = "0.24.7"
num = "0.4.1"
rayon = "1.10.0"

[profile.release-with-debug]
inherits = "release"
debug = true
